@@ -40,14 +40,14 @@
  */
 package com.oracle.truffle.nfi.backend.panama;
 
+import java.lang.foreign.MemorySegment;
+
 import com.oracle.truffle.api.CompilerDirectives;
 import com.oracle.truffle.api.TruffleLanguage;
 import com.oracle.truffle.api.interop.InteropLibrary;
 import com.oracle.truffle.api.interop.TruffleObject;
 import com.oracle.truffle.api.library.ExportLibrary;
 import com.oracle.truffle.api.library.ExportMessage;
-
-import java.lang.foreign.MemorySegment;
 
 @ExportLibrary(InteropLibrary.class)
 class NativeString implements TruffleObject {
@@ -69,9 +69,8 @@ class NativeString implements TruffleObject {
     }
 
     @ExportMessage
-    @SuppressWarnings("preview")
     String asString() {
-        return MemorySegment.ofAddress(this.nativePointer).getUtf8String(0);
+        return MemorySegment.ofAddress(this.nativePointer).getString(0);
     }
 
     @ExportMessage
